--- a/index.html
+++ b/index.html
@@ -3,51 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>Portfolio • Inicio</title>
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#sobre-mi">Sobre mi</a></li>
-          <li><a href="#contactame">Contactame</a></li>
+          <li id="selected"><a href="./index.html">Inicio</a></li>
+          <li><a href="./sobre-mi.html">Sobre mi</a></li>
+          <li><a href="./servicios.html">Servicios</a></li>
+          <li><a href="./contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section id="inicio">
-        <h1>Valentin Blas Troitiño</h1>
-        <img
-          src=""
-          alt="Fotografía en primer plano de Valentin Blas Troitiño"
-        />
-        <p><a href="valentin_troitiño_cv.pdf" target="_blank">Ver CV</a></p>
-      </section>
-      <section id="sobre-mi">
-        <div>
-            <h2>Sobre mi</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae,
-              est. Consequatur obcaecati aliquam in perspiciatis at facilis placeat
-              illo accusamus est quos, explicabo pariatur cupiditate accusantium
-              harum a error autem.
-            </p>
-        </div>
-      </section>
-      <section id="contactame">
-        <div>
-            <h2>Contactame</h2>
-            <form method="post">
-              <label for="mail">Email:</label>
-              <input type="text" name="mail" id="" />
-              <label for="mensaje">Mensaje:</label>
-              <textarea name="mensaje" id=""></textarea>
-              <input type="button" value="Enviar" />
-            </form>
-        </div>
-      </section>
+      <h1>Valentin Blas Troitiño</h1>
+      <img
+        src=""
+        alt="Fotografía en primer plano de Valentin Blas Troitiño"
+      />
+      <p><a href="valentin_troitiño_cv.pdf" target="_blank">Ver CV</a></p>
     </main>
+    <footer>
+      <p>&copy; 2024 Valentin B. Troitiño</p>
+    </footer>
   </body>
 </html>
