--- a/index.html
+++ b/index.html
@@ -18,12 +18,21 @@
       </nav>
     </header>
     <main>
-      <h1>Valentin Blas Troitiño</h1>
-      <img
-        src=""
-        alt="Fotografía en primer plano de Valentin Blas Troitiño"
-      />
-      <p><a href="valentin_troitiño_cv.pdf" target="_blank">Ver CV</a></p>
+      <div class="inicio-content">
+        <div class="presentation">
+          <h1>Valentin Blas Troitiño</h1>
+          <h3>Desarrollador De Software</h3>
+        </div>
+        <a class="button" href="valentin_troitiño_cv.pdf" target="_blank">
+          <h3>Ver CV</h3>
+        </a>
+      </div>
+      <div class="inicio-image">
+        <img
+          src="./assets/img/valentin-fake.png"
+          alt="Fotografía en primer plano de Valentin Blas Troitiño"
+        />
+      </div>
     </main>
     <footer>
       <p>&copy; 2024 Valentin B. Troitiño</p>
