Agrego estilo a Servicios

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main id="inicio">
       <div class="inicio-content">
         <div class="presentation">
           <h1>Valentin Blas Troitiño</h1>
