--- a/servicios.html
+++ b/servicios.html
@@ -17,8 +17,33 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <h2>Servicios</h2>
+    <main id="servicios">
+      <h2>¿Qué ofrezco?</h2>
+      <p>
+        Ofrezco diseño y desarrollo web personalizados, creando sitios modernos
+        y funcionales adaptados a tus necesidades. Desde el diseño visual hasta
+        la implementación técnica, me encargo de todo el proceso para asegurar
+        resultados profesionales.
+      </p>
+      <div class="card-container">
+        <a href="https://cisel.netlify.app/" target="_blank">
+          <div class="card">
+            <img src="./assets/img/cisel.png" alt="" />
+            <div class="card-info">
+              <h3>Cisel</h3>
+              <p>
+                Página ficticia de una empresa dedicada a la venta de modelos 3D
+                para impresión.
+              </p>
+              <div class="card-icons">
+                <i class="icon html"></i>
+                <i class="icon css"></i>
+                <i class="icon js"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </main>
     <footer>
       <p>&copy; 2024 Valentin B. Troitiño</p>
