empiezo pagina contactos

--- a/contacto.html
+++ b/contacto.html
@@ -17,18 +17,19 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main id="contacto">
       <h2>Contactame</h2>
       <p>Si te interesa mi perfil, pongámonos en contacto.</p>
-      <form action="">
-        <label for="nombre">Nombre:</label>
-        <input type="text" name="nombre" id="nombre" />
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" />
-        <label for="mensaje">Mensaje:</label>
-        <textarea name="mensaje" id="mensaje"></textarea>
-        <input type="submit" value="Enviar" />
-      </form>
+        <form action="">
+          <label for="nombre">Nombre:</label>
+          <input type="text" name="nombre" id="nombre" />
+          <label for="email">Email:</label>
+          <input type="email" name="email" id="email" />
+          <label for="mensaje">Mensaje:</label>
+          <textarea name="mensaje" id="mensaje"></textarea>
+          <button class="button"><h3>Enviar</h3></button>
+        </form>
+      </div>
     </main>
     <footer>
       <p>&copy; 2024 Valentin B. Troitiño</p>
