--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -17,7 +17,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main id="sobre-mi">
       <h2>Sobre mi</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae,
