Agrego iconos al footer, link al codigo fuente de cisel y arreglo el formulario

--- a/contacto.html
+++ b/contacto.html
@@ -18,9 +18,12 @@
       </nav>
     </header>
     <main id="contacto">
-      <div class="contacto-title">
+      <div class="title">
         <h2>Contactame</h2>
-        <p>Si te interesa mi perfil, pongámonos en contacto.</p>
+        <div class="contacto-p">
+          <i class="icon mail"></i>
+          <p>valentinbtroitino@gmail.com</p>
+        </div>
       </div>
         <form action="">
           <div class="form-input">
@@ -41,6 +44,10 @@
     </main>
     <footer>
       <p>&copy; 2024 Valentin B. Troitiño</p>
+      <div class="footer-icons">
+        <a class="icon linkedin" href="#"></a>
+        <a class="icon github" href="#"></a>
+      </div>
     </footer>
   </body>
 </html>
