--- a/servicios.html
+++ b/servicios.html
@@ -18,13 +18,15 @@
       </nav>
     </header>
     <main id="servicios">
-      <h2>¿Qué ofrezco?</h2>
-      <p>
-        Ofrezco diseño y desarrollo web personalizados, creando sitios modernos
-        y funcionales adaptados a tus necesidades. Desde el diseño visual hasta
-        la implementación técnica, me encargo de todo el proceso para asegurar
-        resultados profesionales.
-      </p>
+      <div class="title">
+        <h2>¿Qué ofrezco?</h2>
+        <p>
+          Ofrezco diseño y desarrollo web personalizados, creando sitios
+          modernos y funcionales adaptados a tus necesidades. Desde el diseño
+          visual hasta la implementación técnica, me encargo de todo el proceso
+          para asegurar resultados profesionales.
+        </p>
+      </div>
       <div class="card-container">
         <a href="https://cisel.netlify.app/" target="_blank">
           <div class="card">
@@ -43,10 +45,22 @@
             </div>
           </div>
         </a>
+        <div class="card-link">
+          <a
+            href="https://github.com/vtroitio/tp-integrador-g19"
+            target="_blank"
+          >
+            <i class="icon code" title="Ver código fuente"></i>
+          </a>
+        </div>
       </div>
     </main>
     <footer>
       <p>&copy; 2024 Valentin B. Troitiño</p>
+      <div class="footer-icons">
+        <a class="icon linkedin" href="#"></a>
+        <a class="icon github" href="#"></a>
+      </div>
     </footer>
   </body>
 </html>
