--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -28,6 +28,10 @@
     </main>
     <footer>
       <p>&copy; 2024 Valentin B. Troitiño</p>
+      <div class="footer-icons">
+        <a class="icon linkedin" href="#"></a>
+        <a class="icon github" href="#"></a>
+      </div>
     </footer>
   </body>
 </html>
