--- a/contacto.html
+++ b/contacto.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Portfolio • Contacto</title>
+    <title>VBT • Contacto</title>
   </head>
   <body>
     <header>
-      <nav>
+      <nav id="desktop-navbar">
         <ul>
           <li><a href="./index.html">Inicio</a></li>
           <li><a href="./sobre-mi.html">Sobre mi</a></li>
           <li><a href="./servicios.html">Servicios</a></li>
-          <li id="selected"><a href="./contacto.html">Contacto</a></li>
+          <li id="d-selected"><a href="./contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+      <nav id="mobile-navbar">
+        <ul>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./sobre-mi.html">Sobre mi</a></li>
+          <li><a href="./servicios.html">Servicios</a></li>
+          <li id="m-selected"><a href="./contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -25,28 +33,35 @@
           <p>valentinbtroitino@gmail.com</p>
         </div>
       </div>
-        <form action="">
-          <div class="form-input">
-            <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" id="nombre" />
-          </div>
-          <div class="form-input">
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" />
-          </div>
-          <div class="form-input">
-            <label for="mensaje">Mensaje</label>
-            <textarea name="mensaje" id="mensaje"></textarea>
-          </div>
-          <button class="button"><h3>Enviar</h3></button>
-        </form>
-      </div>
+      <form action="">
+        <div class="form-input">
+          <label for="nombre">Nombre</label>
+          <input type="text" name="nombre" id="nombre" required />
+        </div>
+        <div class="form-input">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" required />
+        </div>
+        <div class="form-input">
+          <label for="mensaje">Mensaje</label>
+          <textarea name="mensaje" id="mensaje" required></textarea>
+        </div>
+        <button class="button" type="submit"><h3>Enviar</h3></button>
+      </form>
     </main>
     <footer>
       <p>&copy; 2024 Valentin B. Troitiño</p>
       <div class="footer-icons">
-        <a class="icon linkedin" href="#"></a>
-        <a class="icon github" href="#"></a>
+        <a
+          class="icon linkedin"
+          target="_blank"
+          href="https://www.linkedin.com/in/vbtroitino/"
+        ></a>
+        <a
+          class="icon github"
+          target="_blank"
+          href="https://github.com/vtroitio"
+        ></a>
       </div>
     </footer>
   </body>
