--- a/contacto.html
+++ b/contacto.html
@@ -18,10 +18,18 @@
       </nav>
       <nav id="mobile-navbar">
         <ul>
-          <li><a href="./index.html">Inicio</a></li>
-          <li><a href="./sobre-mi.html">Sobre mi</a></li>
-          <li><a href="./servicios.html">Servicios</a></li>
-          <li id="m-selected"><a href="./contacto.html">Contacto</a></li>
+          <li>
+            <a class="icon home" href="./index.html"></a>
+          </li>
+          <li>
+            <a class="icon user" href="./sobre-mi.html"></a>
+          </li>
+          <li>
+            <a class="icon offer" href="./servicios.html"></a>
+          </li>
+          <li id="m-selected">
+            <a class="icon mail" href="./contacto.html"></a>
+          </li>
         </ul>
       </nav>
     </header>
