desktop navbar fix

--- a/servicios.html
+++ b/servicios.html
@@ -38,9 +38,7 @@
         <h2>¿Qué ofrezco?</h2>
         <p>
           Ofrezco diseño y desarrollo web personalizados, creando sitios
-          modernos y funcionales adaptados a tus necesidades. Desde el diseño
-          visual hasta la implementación técnica, me encargo de todo el proceso
-          para asegurar resultados profesionales.
+          modernos y funcionales adaptados a tus necesidades.
         </p>
       </div>
       <div class="card-container">
