--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,7 @@
         <a
           class="icon github"
           target="_blank"
-          href="https://github.com/vtroitio"
+          href="https://github.com/vtroitino-uade"
         ></a>
       </div>
     </footer>
