agrega funcionalidad de modo oscuro y validación de formulario

--- a/contacto.html
+++ b/contacto.html
@@ -44,15 +44,15 @@
       <form action="">
         <div class="form-input">
           <label for="nombre">Nombre</label>
-          <input type="text" name="nombre" id="nombre" required />
+          <input type="text" name="nombre" id="nombre" />
         </div>
         <div class="form-input">
           <label for="email">Email</label>
-          <input type="email" name="email" id="email" required />
+          <input type="email" name="email" id="email" />
         </div>
         <div class="form-input">
           <label for="mensaje">Mensaje</label>
-          <textarea name="mensaje" id="mensaje" required></textarea>
+          <textarea name="mensaje" id="mensaje"></textarea>
         </div>
         <button class="button" type="submit"><h3>Enviar</h3></button>
       </form>
@@ -71,6 +71,11 @@
           href="https://github.com/vtroitino-uade"
         ></a>
       </div>
+      <div class="footer-icons">
+        <button id="dark" class="icon moon"></button>
+      </div>
     </footer>
+    <script src="./js/dark.js"></script>
+    <script src="./js/validation.js"></script>
   </body>
 </html>
