--- a/servicios.html
+++ b/servicios.html
@@ -86,6 +86,10 @@
           href="https://github.com/vtroitino-uade"
         ></a>
       </div>
+      <div class="footer-icons">
+        <button id="dark" class="icon moon"></button>
+      </div>
     </footer>
+    <script src="./js/dark.js"></script>
   </body>
 </html>
